# poetry-demo

./: main.py  pyproject.toml
src/poetry_demo/: loader_printer.py  mate.py  prova.py  script.py
tests/: test_mate.py  test_new.py
